# json-cove

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src/: App.svelte  main.js  styles.css
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: ContextMenu.svelte  Editor.svelte  MenuBar.svelte  SearchBar.svelte  Tree.svelte  TreeNode.svelte  change-gutter.js  editor-theme.js  json.js  tauri.js
