[package]
name = "json-cove"
version = "0.1.0"
description = "A tiny, fast desktop JSON viewer and editor"
authors = ["Mark Wu"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/markwu123454/json-cove"
edition = "2021"
rust-version = "1.77.2"

# The library that the desktop and (potential) mobile binaries share.
[lib]
name = "json_cove_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
